--- a/public/css/jigsaw.css
+++ b/public/css/jigsaw.css
@@ -1,10 +1,10 @@
-.block {
+#modal-demo .block {
   position: absolute;
   left: 0;
   top: 0;
 }
 
-.sliderContainer {
+#modal-demo .sliderContainer {
   position: relative;
   text-align: center;
   width: 310px;
@@ -16,56 +16,55 @@
   border: 1px solid #e4e7eb;
 }
 
-.sliderContainer_active .slider {
+#modal-demo .sliderContainer_active .slider {
   height: 38px;
   top: -1px;
   border: 1px solid #1991FA;
 }
 
-.sliderContainer_active .sliderMask {
+#modal-demo .sliderContainer_active .sliderMask {
   height: 38px;
   border-width: 1px;
 }
-
-.sliderContainer_success .slider {
+#modal-demo .sliderContainer_success .slider {
   height: 38px;
   top: -1px;
   border: 1px solid #52CCBA;
   background-color: #52CCBA !important;
 }
 
-.sliderContainer_success .sliderMask {
+#modal-demo .sliderContainer_success .sliderMask {
   height: 38px;
   border: 1px solid #52CCBA;
   background-color: #D2F4EF;
 }
 
-.sliderContainer_success .sliderIcon {
+#modal-demo .sliderContainer_success .sliderIcon {
   background-position: 0 0 !important;
 }
 
-.sliderContainer_fail .slider {
+#modal-demo .sliderContainer_fail .slider {
   height: 38px;
   top: -1px;
   border: 1px solid #f57a7a;
   background-color: #f57a7a !important;
 }
 
-.sliderContainer_fail .sliderMask {
+#modal-demo .sliderContainer_fail .sliderMask {
   height: 38px;
   border: 1px solid #f57a7a;
   background-color: #fce1e1;
 }
 
-.sliderContainer_fail .sliderIcon {
+#modal-demo .sliderContainer_fail .sliderIcon {
   top: 14px;
   background-position: 0 -82px !important;
 }
-.sliderContainer_active .sliderText, .sliderContainer_success .sliderText, .sliderContainer_fail .sliderText {
+#modal-demo .sliderContainer_active .sliderText, .sliderContainer_success .sliderText, .sliderContainer_fail .sliderText {
   display: none;
 }
 
-.sliderMask {
+#modal-demo .sliderMask {
   position: absolute;
   left: 0;
   top: 0;
@@ -74,7 +73,7 @@
   background: #D1E9FE;
 }
 
-.slider {
+#modal-demo .slider {
   position: absolute;
   top: 0;
   left: 0;
@@ -86,15 +85,15 @@
   transition: background .2s linear;
 }
 
-.slider:hover {
+#modal-demo .slider:hover {
   background: #1991FA;
 }
 
-.slider:hover .sliderIcon {
+#modal-demo .slider:hover .sliderIcon {
   background-position: 0 -13px;
 }
 
-.sliderIcon {
+#modal-demo .sliderIcon {
   position: absolute;
   top: 15px;
   left: 13px;
@@ -104,7 +103,7 @@
   background-size: 34px 471px;
 }
 
-.refreshIcon {
+#modal-demo .refreshIcon {
   position: absolute;
   right: 0;
   top: 0;
